Updates to landing page - formatting and layout

--- a/index.html
+++ b/index.html
@@ -15,18 +15,33 @@
       </nav>
     </header>
 
-    <div class="wrapper clearfix">
+    <div class="wrapper wrapper_padding  clearfix">
       <div class="col-1 homepage_content">
         <h2>About</h2>
         <hr>
-        <p>I am fullstack Ruby on Rails developer.</p>
-        <p></p>
+        <p>I am a fullstack Ruby on Rails developer, living in London, UK.</p>
+        <p>I enjoy building dynamic and scalable web applications, and beautiful websites showcasing businesses, portfolios and blogs.</p>
+        <p>As a former corporate investigator and strategic communications specialist, I can also advise on business strategy and on how to intelligently reach your target audiences.</p>
       </div>
-      <col-2 class="homepage_content">
-
-      </col-2>
-      <div class="col 3 homepage_content">
-
+      <div class="col-2 homepage_content">
+        <h2>Writing</h2>
+        <hr>
+        <h3>The DO List</h3>
+        <p class="date">Friday April 10th</p>
+        <h3>The DO List</h3>
+        <p class="date">Friday April 10th</p>
+        <h3>The DO List</h3>
+        <p class="date">Friday April 10th</p>
+      </div>
+      <div class="col-3 homepage_content">
+        <h2>Projects</h2>
+        <hr>
+        <h3>Twitter Clone</h3>
+        <p class="date">Friday April 10th</p>
+        <h3>Pinterest Clone</h3>
+        <p class="date">Friday April 10th</p>
+        <h3>Example Portfolio</h3>
+        <p class="date">Friday April 10th</p>
       </div>
     </div>
   </body>
