Further updates to homepage frontend

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Fullstack Ruby on Rails Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="scss/application.css">
   </head>
   <body>
@@ -16,11 +17,11 @@
     </header>
 
     <div class="wrapper wrapper_padding  clearfix">
-      <div class="col-1 homepage_content">
+      <div class="col-1 about homepage_content">
         <h2>About</h2>
         <hr>
         <p>I am a fullstack Ruby on Rails developer, living in London, UK.</p>
-        <p>I enjoy building dynamic and scalable web applications, and beautiful websites showcasing businesses, portfolios and blogs.</p>
+        <p>I enjoy building dynamic and scalable web applications, and beautiful websites showcasing businesses, <a href="#">portfolios and blogs</a>.</p>
         <p>As a former corporate investigator and strategic communications specialist, I can also advise on business strategy and on how to intelligently reach your target audiences.</p>
       </div>
       <div class="col-2 homepage_content">
@@ -44,5 +45,13 @@
         <p class="date">Friday April 10th</p>
       </div>
     </div>
+    <footer id="main_footer">
+      <p class="copyright">&copy  Nayela Wickramasuriya </p>
+      <nav>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+      </nav>
+    </footer>
   </body>
 </html>
