Final homepage styling updates

--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
         <p>As a former corporate investigator and strategic communications specialist, I can also advise on business strategy and on how to intelligently reach your target audiences.</p>
       </div>
       <div class="col-2 homepage_content">
-        <h2>Writing</h2>
+        <h2>Things I've Written</h2>
         <hr>
-        <h3>The DO List</h3>
+        <h3><a href="#">The DO List</a></h3>
         <p class="date">Friday April 10th</p>
-        <h3>The DO List</h3>
+        <h3><a href="#">The DO List</a></h3>
         <p class="date">Friday April 10th</p>
-        <h3>The DO List</h3>
+        <h3><a href="#">The DO List</a></h3>
         <p class="date">Friday April 10th</p>
       </div>
       <div class="col-3 homepage_content">
-        <h2>Projects</h2>
+        <h2>Things I've Built</h2>
         <hr>
-        <h3>Twitter Clone</h3>
+        <h3><a href="#">Twitter Clone</a></h3>
         <p class="date">Friday April 10th</p>
-        <h3>Pinterest Clone</h3>
+        <h3><a href="#">Pinterest Clone</a></h3>
         <p class="date">Friday April 10th</p>
-        <h3>Example Portfolio</h3>
+        <h3><a href="#">Example Portfolio</a></h3>
         <p class="date">Friday April 10th</p>
       </div>
     </div>
