--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <hr>
         <p>I am a fullstack Ruby on Rails developer, living in London, UK.</p>
         <p>I enjoy building dynamic and scalable web applications, and beautiful websites showcasing businesses, <a href="#">portfolios and blogs</a>.</p>
-        <p>As a former corporate investigator and strategic communications specialist, I can also advise on business strategy and on how to intelligently reach your target audiences.</p>
+        <p>As a former corporate investigator and strategic communications specialist, I can also advise on business strategy, and on how to best reach your target audiences.</p>
       </div>
       <div class="col-2 homepage_content">
         <h2>Things I've Written</h2>
