Articles page frontend styled

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header id="main_navigation" class="clearfix">
       <a href="#" class="name">Nayela Wickramasuriya</a>
       <nav>
-        <a href="#">Articles</a>
+        <a href="articles.html">Articles</a>
         <a href="#">Projects</a>
         <a href="#">Contact</a>
       </nav>
