--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <a href="articles.html">Articles</a>
         <a href="#">Projects</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </header>
 
@@ -46,7 +46,7 @@
       </div>
     </div>
     <footer id="main_footer">
-      <p class="copyright">&copy  Nayela Wickramasuriya </p>
+      <p class="copyright">&copy  Nayela Wickramasuriya 2018</p>
       <nav>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-github"></i></a>
