--- a/article_show.html
+++ b/article_show.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <header id="main_navigation" class="clearfix">
-      <a href="#" class="name">Nayela Wickramasuriya</a>
+      <a href="index.html" class="name">Nayela Wickramasuriya</a>
       <nav>
         <a href="articles.html">Articles</a>
         <a href="#">Projects</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </header>
     <div id="post_show_content" class="skinny_wrapper wrapper_padding">
