--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header id="main_navigation" class="clearfix">
-      <a href="#" class="name">Nayela Wickramasuriya</a>
+      <a href="index.html" class="name">Nayela Wickramasuriya</a>
       <nav>
         <a href="articles.html">Articles</a>
         <a href="#">Projects</a>
